lib/dmp40/TLDFM.h

//******************************************************************************
// convenience voltage functions
// sets the voltages for all segments and all tilt elements

ViStatus _VI_FUNC TLDFM_get_voltages                  (ViSession instrumentHandle,
                                                       ViReal64  segmentVoltages[],
                                                       ViReal64  tiltVoltages[]);
ViStatus _VI_FUNC TLDFM_set_voltages                  (ViSession instrumentHandle,
                                                       ViReal64  segmentVoltages[],
                                                       ViReal64  tiltVoltages[]);
//******************************************************************************
// device information functions

ViStatus _VI_FUNC TLDFM_get_manufacturer_name         (ViSession instrumentHandle,
                                                       ViChar    manufacturerName[]);
ViStatus _VI_FUNC TLDFM_get_instrument_name           (ViSession instrumentHandle,
                                                       ViChar    instrName[]);
ViStatus _VI_FUNC TLDFM_set_instrument_name           (ViSession instrumentHandle,
                                                       ViChar    instrName[]);
ViStatus _VI_FUNC TLDFM_get_serial_Number             (ViSession instrumentHandle,
                                                       ViChar    serialNumber[]);
ViStatus _VI_FUNC TLDFM_set_serial_number             (ViSession instrumentHandle,
                                                       ViChar    serialNumber[]);
ViStatus _VI_FUNC TLDFM_get_user_text                 (ViSession instrumentHandle,
                                                       ViChar    userText[]);
ViStatus _VI_FUNC TLDFM_set_user_text                 (ViSession instrumentHandle,
                                                       ViChar    userText[]);
ViStatus _VI_FUNC TLDFM_update_firmware               (ViSession instrumentHandle,
                                                       ViChar    firmwareFile[]);
ViStatus _VI_FUNC TLDFM_enable_event                  (ViSession instrumentHandle);
ViStatus _VI_FUNC TLDFM_disable_event                 (ViSession instrumentHandle);
ViStatus _VI_FUNC TLDFM_add_status_delegate           (ViSession    instrumentHandle,
	                                                   StatusUpdate statusUpdateDelegate);
//******************************************************************************

ViStatus _VI_FUNC TLDFM_get_segment_count             (ViSession instrumentHandle,
                                                       ViUInt32* pSegmentCount);
ViStatus _VI_FUNC TLDFM_get_segment_maximum           (ViSession instrumentHandle,
                                                       ViReal64* pSegmentMaximum);
ViStatus _VI_FUNC TLDFM_get_segment_minimum           (ViSession instrumentHandle,
                                                       ViReal64* pSegmentMinimum);
ViStatus _VI_FUNC TLDFM_get_tilt_count                (ViSession instrumentHandle,
                                                       ViUInt32* pTiltCount);
ViStatus _VI_FUNC TLDFM_get_tilt_maximum              (ViSession instrumentHandle,
                                                       ViReal64* pTiltMaximum);
ViStatus _VI_FUNC TLDFM_get_tilt_minimum              (ViSession instrumentHandle,
                                                       ViReal64* pTiltMinimum);