src/main/java/dmp40j/bindings/TLDFM_64Library.java

	/**
	 * sets the voltages for all segments and all tilt elements<br>
	 * Original signature : <code>ViStatus TLDFM_get_voltages(ViSession, ViReal64[], ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:93</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_voltages(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > segmentVoltages, Pointer<Double > tiltVoltages) {
		return TLDFM_get_voltages(instrumentHandle, Pointer.getPeer(segmentVoltages), Pointer.getPeer(tiltVoltages));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_voltages(@org.bridj.ann.CLong long instrumentHandle, @Ptr long segmentVoltages, @Ptr long tiltVoltages);
	/**
	 * Original signature : <code>ViStatus TLDFM_set_voltages(ViSession, ViReal64[], ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:97</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_set_voltages(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > segmentVoltages, Pointer<Double > tiltVoltages) {
		return TLDFM_set_voltages(instrumentHandle, Pointer.getPeer(segmentVoltages), Pointer.getPeer(tiltVoltages));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_set_voltages(@org.bridj.ann.CLong long instrumentHandle, @Ptr long segmentVoltages, @Ptr long tiltVoltages);
	/**
	 * device information functions<br>
	 * Original signature : <code>ViStatus TLDFM_get_manufacturer_name(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:104</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_manufacturer_name(@org.bridj.ann.CLong long instrumentHandle, Pointer<Byte > manufacturerName) {
		return TLDFM_get_manufacturer_name(instrumentHandle, Pointer.getPeer(manufacturerName));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_manufacturer_name(@org.bridj.ann.CLong long instrumentHandle, @Ptr long manufacturerName);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_instrument_name(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:107</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_instrument_name(@org.bridj.ann.CLong long instrumentHandle, Pointer<Byte > instrName) {
		return TLDFM_get_instrument_name(instrumentHandle, Pointer.getPeer(instrName));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_instrument_name(@org.bridj.ann.CLong long instrumentHandle, @Ptr long instrName);
	/**
	 * Original signature : <code>ViStatus TLDFM_set_instrument_name(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:110</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_set_instrument_name(@org.bridj.ann.CLong long instrumentHandle, Pointer<Byte > instrName) {
		return TLDFM_set_instrument_name(instrumentHandle, Pointer.getPeer(instrName));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_set_instrument_name(@org.bridj.ann.CLong long instrumentHandle, @Ptr long instrName);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_serial_Number(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:113</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_serial_Number(@org.bridj.ann.CLong long instrumentHandle, Pointer<Byte > serialNumber) {
		return TLDFM_get_serial_Number(instrumentHandle, Pointer.getPeer(serialNumber));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_serial_Number(@org.bridj.ann.CLong long instrumentHandle, @Ptr long serialNumber);
	/**
	 * Original signature : <code>ViStatus TLDFM_set_serial_number(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:116</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_set_serial_number(@org.bridj.ann.CLong long instrumentHandle, Pointer<Byte > serialNumber) {
		return TLDFM_set_serial_number(instrumentHandle, Pointer.getPeer(serialNumber));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_set_serial_number(@org.bridj.ann.CLong long instrumentHandle, @Ptr long serialNumber);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_user_text(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:119</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_user_text(@org.bridj.ann.CLong long instrumentHandle, Pointer<Byte > userText) {
		return TLDFM_get_user_text(instrumentHandle, Pointer.getPeer(userText));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_user_text(@org.bridj.ann.CLong long instrumentHandle, @Ptr long userText);
	/**
	 * Original signature : <code>ViStatus TLDFM_set_user_text(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:122</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_set_user_text(@org.bridj.ann.CLong long instrumentHandle, Pointer<Byte > userText) {
		return TLDFM_set_user_text(instrumentHandle, Pointer.getPeer(userText));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_set_user_text(@org.bridj.ann.CLong long instrumentHandle, @Ptr long userText);
	/**
	 * Original signature : <code>ViStatus TLDFM_update_firmware(ViSession, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:125</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_update_firmware(@org.bridj.ann.CLong long instrumentHandle, Pointer<Byte > firmwareFile) {
		return TLDFM_update_firmware(instrumentHandle, Pointer.getPeer(firmwareFile));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_update_firmware(@org.bridj.ann.CLong long instrumentHandle, @Ptr long firmwareFile);
	/**
	 * Original signature : <code>ViStatus TLDFM_enable_event(ViSession)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:128</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static native long TLDFM_enable_event(@org.bridj.ann.CLong long instrumentHandle);
	/**
	 * Original signature : <code>ViStatus TLDFM_disable_event(ViSession)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:130</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static native long TLDFM_disable_event(@org.bridj.ann.CLong long instrumentHandle);
	/**
	 * Original signature : <code>ViStatus TLDFM_add_status_delegate(ViSession, StatusUpdate)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:132</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_add_status_delegate(@org.bridj.ann.CLong long instrumentHandle, Pointer<TLDFM_64Library.StatusUpdate > statusUpdateDelegate) {
		return TLDFM_add_status_delegate(instrumentHandle, Pointer.getPeer(statusUpdateDelegate));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_add_status_delegate(@org.bridj.ann.CLong long instrumentHandle, @Ptr long statusUpdateDelegate);
	/**
	 * ******************************************************************************<br>
	 * Original signature : <code>ViStatus TLDFM_get_segment_count(ViSession, ViUInt32*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:137</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_segment_count(@org.bridj.ann.CLong long instrumentHandle, Pointer<org.bridj.CLong > pSegmentCount) {
		return TLDFM_get_segment_count(instrumentHandle, Pointer.getPeer(pSegmentCount));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_segment_count(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pSegmentCount);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_segment_maximum(ViSession, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:140</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_segment_maximum(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > pSegmentMaximum) {
		return TLDFM_get_segment_maximum(instrumentHandle, Pointer.getPeer(pSegmentMaximum));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_segment_maximum(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pSegmentMaximum);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_segment_minimum(ViSession, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:143</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_segment_minimum(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > pSegmentMinimum) {
		return TLDFM_get_segment_minimum(instrumentHandle, Pointer.getPeer(pSegmentMinimum));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_segment_minimum(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pSegmentMinimum);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_tilt_count(ViSession, ViUInt32*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:146</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_tilt_count(@org.bridj.ann.CLong long instrumentHandle, Pointer<org.bridj.CLong > pTiltCount) {
		return TLDFM_get_tilt_count(instrumentHandle, Pointer.getPeer(pTiltCount));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_tilt_count(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pTiltCount);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_tilt_maximum(ViSession, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:149</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_tilt_maximum(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > pTiltMaximum) {
		return TLDFM_get_tilt_maximum(instrumentHandle, Pointer.getPeer(pTiltMaximum));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_tilt_maximum(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pTiltMaximum);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_tilt_minimum(ViSession, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:152</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_tilt_minimum(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > pTiltMinimum) {
		return TLDFM_get_tilt_minimum(instrumentHandle, Pointer.getPeer(pTiltMinimum));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_tilt_minimum(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pTiltMinimum);
